# NumberArrayClass

./: CMakeLists.txt
include/: NumberArray.h
src/: NumberArray.cpp  main.cpp
